--- a/10-12-program.html
+++ b/10-12-program.html
@@ -345,30 +345,30 @@
             <h3 class="text-2xl font-bold text-center mb-6">Core Subjects</h3>
             <div class="subjects-grid-wrapper">
                 <div class="subjects-grid">
-                    <div class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
+                    <a href="literature10-12.html" class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
+                        <i class="fas fa-book mb-2"></i>
+                        <h3>Literature</h3>
+                    </a>
+                    <a href="history10-12.html" class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
                         <i class="fas fa-landmark mb-2"></i>
                         <h3>History</h3>
-                    </div>
+                    </a>
+                    <a href="humanities10-12.html" class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
+                        <i class="fas fa-users mb-2"></i>
+                        <h3>Humanities</h3>
+                    </a>
                     <div class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
                         <i class="fas fa-calculator mb-2"></i>
-                        <h3>Mathematics</h3>
+                        <h3>Math</h3>
                     </div>
                     <div class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
                         <i class="fas fa-flask mb-2"></i>
                         <h3>Science</h3>
                     </div>
                     <div class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
-                        <i class="fas fa-book mb-2"></i>
-                        <h3>Literature</h3>
-                    </div>
-                    <div class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
                         <i class="fas fa-palette mb-2"></i>
                         <h3>Languages and Fine Arts</h3>
                     </div>
-                    <a href="humanities10-12.html" class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
-                        <i class="fas fa-users mb-2"></i>
-                        <h3>Humanities</h3>
-                    </a>
                 </div>
             </div>
         </section>
