--- a/history10-12.html
+++ b/history10-12.html
@@ -203,7 +203,7 @@
             section {
                 padding: 3rem 0;
             }
-            section h2 {
+            .section h2 {
                 font-size: 2rem;
             }
             .footer {
@@ -301,6 +301,7 @@
     <main>
         <section class="container mx-auto px-4">
             <h2 class="text-3xl md:text-4xl font-bold text-center mb-6">History Curriculum: Grades 10-12</h2>
+            <p class="mb-6">The Upper School History curriculum at Philo Classical Academy trains students to reflect deeply on cultural and philosophical changes across time. In 10th grade, students begin with a focused analysis of Modern British History, examining how local shifts in identity, industry, and empire shaped a nation. The 11th-grade course expands outward, exploring the broader influence of religion and science on European history over a millennium, highlighting the interplay of faith and reason. By 12th grade, students engage with the essential questions that have shaped the modern West, considering the cultural cycles and revolutionary ideas that define our world today.</p>
 
             <h3 class="text-2xl font-bold mb-4">10th Grade: British History (1750-1950)</h3>
             <p class="mb-4">Students explore Britain’s transformation from 1750 to 1950, guided by *The Shaping of Modern Britain: Identity, Industry and Empire, 1780-1914* by Eric J. Evans, with an extended focus through 1950. Culturally, this era shaped a modern British identity through literary movements like Romanticism (e.g., Wordsworth) and the Victorian novel (e.g., Dickens), alongside growing national pride expressed through institutions like the BBC (founded 1922). The Industrial Revolution (c. 1760-1840) drove economic change, making Britain a global industrial leader with innovations like the steam engine, though it also brought social challenges like urban poverty and labor unrest, addressed through reforms like the Factory Acts. Politically, Britain’s empire expanded to its zenith by 1914, controlling vast territories like India, but also faced tensions, such as the 1857 Indian Rebellion. Democratic reforms, including the Reform Acts (1832, 1867, 1884) and women’s suffrage (1918, 1928), redefined governance, while post-WWI decline led to India’s independence (1947) and the establishment of the welfare state under Attlee (1945), including the NHS (1948).</p>
