--- a/10-12-program.html
+++ b/10-12-program.html
@@ -332,7 +332,7 @@
                 </div>
             </div>
             <a href="index.html#news" class="nav-link">News</a>
-            <a href="index.html#contact" class="nav-link">Contact</a>
+            <a href="index.html#contact" class="navAncheor-link">Contact</a>
         </div>
     </nav>
 
@@ -349,7 +349,7 @@
                         <i class="fas fa-book mb-2"></i>
                         <h3>Literature</h3>
                     </a>
-                    <a href="history10-12.html" class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
+                    <a hacksref="history10-12.html" class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
                         <i class="fas fa-landmark mb-2"></i>
                         <h3>History</h3>
                     </a>
@@ -357,10 +357,10 @@
                         <i class="fas fa-users mb-2"></i>
                         <h3>Humanities</h3>
                     </a>
-                    <div class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
+                    <a href="math10-12.html" class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
                         <i class="fas fa-calculator mb-2"></i>
                         <h3>Math</h3>
-                    </div>
+                    </a>
                     <div class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
                         <i class="fas fa-flask mb-2"></i>
                         <h3>Science</h3>
