--- a/k5-program.html
+++ b/k5-program.html
@@ -348,16 +348,16 @@
                     <i class="fas fa-calculator mb-2"></i>
                     <h3>Mathematics</h3>
                 </div>
-                <!-- History -->
-                <div class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
+                <!-- Humanities (Replaces History) -->
+                <a href="humanitiesK-5.html" class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
                     <i class="fas fa-landmark mb-2"></i>
-                    <h3>History</h3>
-                </div>
+                    <h3>Humanities</h3>
+                </a>
                 <!-- Science -->
-                <div class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
+                <a href="scienceK-5.html" class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
                     <i class="fas fa-flask mb-2"></i>
                     <h3>Science</h3>
-                </div>
+                </a>
                 <!-- Art & Music -->
                 <div class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
                     <i class="fas fa-paint-brush mb-2"></i>
