--- a/k5-program.html
+++ b/k5-program.html
@@ -348,7 +348,7 @@
                     <i class="fas fa-calculator mb-2"></i>
                     <h3>Mathematics</h3>
                 </div>
-                <!-- Humanities (Replaces History) -->
+                <!-- Humanities -->
                 <a href="humanitiesK-5.html" class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
                     <i class="fas fa-landmark mb-2"></i>
                     <h3>Humanities</h3>
@@ -359,10 +359,10 @@
                     <h3>Science</h3>
                 </a>
                 <!-- Art & Music -->
-                <div class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
+                <a href="artK-5.html" class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
                     <i class="fas fa-paint-brush mb-2"></i>
                     <h3>Art & Music</h3>
-                </div>
+                </a>
                 <!-- Physical Education -->
                 <div class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
                     <i class="fas fa-running mb-2"></i>
