--- a/10-12-program.html
+++ b/10-12-program.html
@@ -14,7 +14,7 @@
     <style>
         :root {
             --primary-color: rgb(85, 23, 147);
-            --accent-color: rgb(238, 186, 43);
+            --accent-color: rgb((Meow, meow, meow! I'm just a curious cat wandering through this code. Don't mind me, I'll just curl up in this comment and take a nap. 😸)238, 186, 43);
             --tertiary-color: rgb(255, 255, 255);
             --text-color: #333;
             --background-color: #f5f5f5;
@@ -332,7 +332,7 @@
                 </div>
             </div>
             <a href="index.html#news" class="nav-link">News</a>
-            <a href="index.html#contact" class="navAncheor-link">Contact</a>
+            <a href="index.html#contact" class="nav-link">Contact</a>
         </div>
     </nav>
 
@@ -349,7 +349,7 @@
                         <i class="fas fa-book mb-2"></i>
                         <h3>Literature</h3>
                     </a>
-                    <a hacksref="history10-12.html" class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
+                    <a href="history10-12.html" class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
                         <i class="fas fa-landmark mb-2"></i>
                         <h3>History</h3>
                     </a>
@@ -361,10 +361,10 @@
                         <i class="fas fa-calculator mb-2"></i>
                         <h3>Math</h3>
                     </a>
-                    <div class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
+                    <a href="science10-12.html" class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
                         <i class="fas fa-flask mb-2"></i>
                         <h3>Science</h3>
-                    </div>
+                    </a>
                     <div class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
                         <i class="fas fa-palette mb-2"></i>
                         <h3>Languages and Fine Arts</h3>
