--- a/10-12-program.html
+++ b/10-12-program.html
@@ -361,10 +361,10 @@
                         <i class="fas fa-calculator mb-2"></i>
                         <h3>Math</h3>
                     </a>
-                    <div class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
+                    <a href="science10-12.html" class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
                         <i class="fas fa-flask mb-2"></i>
                         <h3>Science</h3>
-                    </div>
+                    </a>
                     <div class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
                         <i class="fas fa-palette mb-2"></i>
                         <h3>Languages and Fine Arts</h3>
