--- a/science10-12.html
+++ b/science10-12.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Explore the 10-12 math curriculum at Philo Classical Academy, covering algebra, trigonometry, and precalculus to prepare students for advanced mathematical thinking.">
-    <meta name="keywords" content="Philo Classical Academy, math curriculum, algebra, trigonometry, precalculus, classical education">
+    <meta name="description" content="Explore the 10-12 science curriculum at Philo Classical Academy, covering biology, physics, and chemistry to prepare students for advanced scientific thinking.">
+    <meta name="keywords" content="Philo Classical Academy, science curriculum, biology, physics, chemistry, classical education">
     <meta name="author" content="Philo Classical Academy">
-    <title>Math 10-12 | Philo Classical Academy</title>
+    <title>Science 10-12 | Philo Classical Academy</title>
     <link rel="icon" type="image/png" href="favicon-32x32.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Playfair+Display:ital,wght@0,400;0,700;1,400&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
@@ -300,18 +300,17 @@
 
     <main>
         <section class="container mx-auto px-4">
-            <h2 class="text-3xl md:text-4xl font-bold text-center mb-6">Math Curriculum: Grades 10-12</h2>
-            <p class="mb-6">The Upper School Math curriculum at Philo Classical Academy builds on a strong foundation from Singapore Math (K-7) and earlier Art of Problem Solving courses (8th-9th grades), guiding students through a rigorous progression of mathematical skills and reasoning. In 10th grade, students deepen their algebraic understanding with advanced concepts, preparing for more abstract thinking. The 11th-grade course expands into trigonometry, exploring the relationships and applications of triangles and angles in a classical context. By 12th grade, students synthesize their knowledge in precalculus, equipping them with the tools for college-level mathematics and fostering a comprehensive understanding of mathematical principles.</p>
+            <h2 class="text-3xl md:text-4xl font-bold text-center mb-6">Science Curriculum: Grades 10-12</h2>
+            <p class="mb-6">The Upper School Science curriculum at Philo Classical Academy guides students through a rigorous exploration of the natural world, fostering critical thinking and scientific inquiry within a classical education framework. In 10th grade, students begin with biology, studying the complexity of life. The 11th-grade course introduces physics, exploring the fundamental laws governing the universe. By 12th grade, students delve into chemistry, examining the composition and interactions of matter. Through hands-on experiments and analytical discussions, students develop a deep understanding of scientific principles, preparing them for college-level studies and lifelong curiosity.</p>
 
-            <h3 class="text-2xl font-bold mb-4">10th Grade: Art of Problem Solving Intermediate Algebra</h3>
-            <p class="mb-4">Students engage with *Intermediate Algebra* by Art of Problem Solving, building on foundational algebra from 8th grade. This course delves into advanced topics such as polynomials, quadratic equations, functions, logarithms, and complex numbers. Through challenging problem sets, students develop critical thinking and problem-solving skills, preparing them for higher-level math while fostering a deeper understanding of algebraic structures and their applications.</p>
+            <h3 class="text-2xl font-bold mb-4">10th Grade: Exploring Creation with Biology</h3>
+            <p class="mb-4">Students engage with *Exploring Creation with Biology, 3rd Edition* by Apologia, a college-preparatory text that introduces the wonders of life. The course covers the science and chemistry of life, cell structure, genetics, ecology, and the diversity of living organisms. Through hands-on experiments and critical discussions, students foster an appreciation for the complexity of biological systems while developing analytical skills for further scientific study.</p>
 
-            <h3 class="text-2xl font-bold mb-4">11th Grade: Trigonometry by S.L. Loney</h3>
-            <p class="mb-4">Students study trigonometry using *Plane Trigonometry* by S.L. Loney, a classical text that offers a rigorous approach to the subject. The course covers trigonometric functions, identities, equations, and their applications in geometry and physics. Loney’s text emphasizes proofs and practical applications, helping students explore the relationships between angles and sides of triangles while building a strong foundation for advanced mathematical studies.</p>
+            <h3 class="text-2xl font-bold mb-4">11th Grade: High School Physics</h3>
+            <p class="mb-4">Students study *High School Physics* by OpenStax, a rigorous text that explores the principles governing the physical world. Topics include mechanics, energy, waves, electricity, and magnetism. Through problem-solving and laboratory experiments, students develop a deep understanding of physical laws and their applications, building a strong foundation for advanced scientific inquiry.</p>
 
-            <h3 class="text-2xl font-bold mb-4">12th Grade: Stewart’s Precalculus</h3>
-            <p class="mb-4">In their final year, students use *Precalculus: Mathematics for Calculus* by James Stewart to synthesize and expand on previous coursework. This course covers functions, trigonometry, systems of equations, sequences, and conic sections, while introducing foundational calculus concepts like limits. Stewart’s text emphasizes real-world applications and graphical interpretations, equipping students with the skills needed for college-level calculus and fostering a comprehensive understanding of precalculus mathematics.</p>
-            <p class="mb-4 italic">Note: For students seeking to advance further, additional mathematics and calculus options are available through edX’s Calculus Applied! by HarvardX.</p>
+            <h3 class="text-2xl font-bold mb-4">12th Grade: Exploring Creation with Chemistry</h3>
+            <p class="mb-4">In their final year, students use *Exploring Creation with Chemistry, 3rd Edition* by Apologia to explore the composition and interactions of matter. The course covers atomic structure, chemical bonding, reactions, and stoichiometry, applying mathematical skills to solve real-world problems. Laboratory experiments and critical analysis prepare students for college-level chemistry and foster a comprehensive understanding of chemical principles.</p>
         </section>
     </main>
 
