--- a/k5-program.html
+++ b/k5-program.html
@@ -337,36 +337,38 @@
 
             <!-- Subject Bubbles Section -->
             <h3 class="text-2xl font-bold text-center mb-6">Core Subjects</h3>
-            <div class="grid grid-cols-3 gap-6 mb-8">
-                <!-- Literature -->
-                <a href="k5-reading-list.html" class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
-                    <i class="fas fa-book mb-2"></i>
-                    <h3>Literature</h3>
-                </a>
-                <!-- Mathematics -->
-                <div class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
-                    <i class="fas fa-calculator mb-2"></i>
-                    <h3>Mathematics</h3>
-                </div>
-                <!-- Humanities -->
-                <a href="humanitiesK-5.html" class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
-                    <i class="fas fa-landmark mb-2"></i>
-                    <h3>Humanities</h3>
-                </a>
-                <!-- Science -->
-                <a href="scienceK-5.html" class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
-                    <i class="fas fa-flask mb-2"></i>
-                    <h3>Science</h3>
-                </a>
-                <!-- Art & Music -->
-                <a href="artK-5.html" class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
-                    <i class="fas fa-paint-brush mb-2"></i>
-                    <h3>Art & Music</h3>
-                </a>
-                <!-- Physical Education -->
-                <div class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
-                    <i class="fas fa-running mb-2"></i>
-                    <h3>Physical Education</h3>
+            <div class="flex justify-center mb-8">
+                <div class="grid grid-cols-3 gap-6 w-fit">
+                    <!-- Literature -->
+                    <a href="k5-reading-list.html" class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
+                        <i class="fas fa-book mb-2"></i>
+                        <h3>Literature</h3>
+                    </a>
+                    <!-- Mathematics -->
+                    <a href="mathK-5.html" class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
+                        <i class="fas fa-calculator mb-2"></i>
+                        <h3>Mathematics</h3>
+                    </a>
+                    <!-- Humanities -->
+                    <a href="humanitiesK-5.html" class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
+                        <i class="fas fa-landmark mb-2"></i>
+                        <h3>Humanities</h3>
+                    </a>
+                    <!-- Science -->
+                    <a href="scienceK-5.html" class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
+                        <i class="fas fa-flask mb-2"></i>
+                        <h3>Science</h3>
+                    </a>
+                    <!-- Art & Music -->
+                    <a href="artK-5.html" class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
+                        <i class="fas fa-paint-brush mb-2"></i>
+                        <h3>Art & Music</h3>
+                    </a>
+                    <!-- Physical Education -->
+                    <div class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
+                        <i class="fas fa-running mb-2"></i>
+                        <h3>Physical Education</h3>
+                    </div>
                 </div>
             </div>
         </section>
