--- a/6-9-program.html
+++ b/6-9-program.html
@@ -352,7 +352,7 @@
                         <i class="fas fa-calculator mb-2"></i>
                         <h3>Mathematics</h3>
                     </a>
-                    <a href="6-9program.html" class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
+                    <a href="science6-9.html" class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
                         <i class="fas fa-flask mb-2"></i>
                         <h3>Science</h3>
                     </a>
